outline of code in comments

--- a/static/newpost.html
+++ b/static/newpost.html
@@ -32,10 +32,34 @@
 		</div>
 
 		<div>
-			<!--- make newpost button -->
-			<a href="newpost.html">
-				<p>New Post</p>
+			<!-- make back button -->
+			<a href="index.html">
+				<p>Back</p>
 			</a>
 		</div>
+
+		<div>
+			<!-- add text box -->
+		</div>
+
+
+		<div>
+			<!-- add attach dropdown menu-->
+		</div>
+
+		<div>
+			<a href="index.html">
+				<!-- add new post to post list, make post button-->
+				<p>Post</p>
+			</a>
+		</div>
+
+
+
+
+
+
+
+
 </body>
 </html>
