--- a/static/newpost.html
+++ b/static/newpost.html
@@ -5,13 +5,9 @@
 	<title>FeelzApp</title>	
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link href="css/bootstrap.min.css" rel="stylesheet">
-	<link href="css/bootstrap-theme.min.css" rel="stylesheet">
-	<link href="css/introHCI.css" rel="stylesheet">
+	<link href="css/FeelzApp.css" rel="stylesheet">
 
-	<script src="https://code.jquery.com/jquery.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/introHCI.js"></script>
+	<script src="js/FeelzApp.js"></script>
 
 	<!-- this is a comment in HTML -->
 
