add placeholder buttons

--- a/static/index.html
+++ b/static/index.html
@@ -37,5 +37,11 @@
 				<p>New Post</p>
 			</a>
 		</div>
+
+		<div>
+			<!--- make newpost button -->
+				<p>List posts here, maybe insert silly placeholder post</p>
+			</a>
+		</div>
 </body>
 </html>
