--- a/static/newpost.html
+++ b/static/newpost.html
@@ -36,16 +36,25 @@
 
 		<div>
 			<!-- add text box -->
+			<textarea rows="4" cols="50">
+				Enter text here
+			</textarea>
 		</div>
 
 
 		<div>
 			<!-- add attach dropdown menu-->
+			<select>
+			  <option value="Attach">Attach</option>
+			  <option value="Video">Video</option>
+			  <option value="Audio">Audio</option>
+			  <option value="Etc">Etc</option>
+			</select>
 		</div>
 
 		<div>
+			<!-- add new post to post list, make post button-->
 			<a href="index.html">
-				<!-- add new post to post list, make post button-->
 				<p>Post</p>
 			</a>
 		</div>
