add class to div sections

--- a/static/newpost.html
+++ b/static/newpost.html
@@ -27,7 +27,7 @@
 			<h1>FeelzApp</h1>
 		</div>
 
-		<div>
+		<div class="backButton">
 			<!-- make back button -->
 			<a href="index.html">
 				<p>Back</p>
@@ -52,7 +52,7 @@
 			</select>
 		</div>
 
-		<div>
+		<div class="postButton">
 			<!-- add new post to post list, make post button-->
 			<a href="index.html">
 				<p>Post</p>
