--- a/static/index.html
+++ b/static/index.html
@@ -7,11 +7,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<link href="css/bootstrap-theme.min.css" rel="stylesheet">
-	<link href="css/introHCI.css" rel="stylesheet">
+	<link href="css/FeelzApp.css" rel="stylesheet">
 
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="js/bootstrap.min.js"></script>
-	<script src="js/introHCI.js"></script>
+	<script src="js/FeelzApp.js"></script>
 
 	<!-- this is a comment in HTML -->
 
@@ -34,7 +34,9 @@
 		<div>
 			<!--- make newpost button -->
 			<a href="newpost.html">
-				<p>New Post</p>
+				<button type="button" class="btn btn-default btn-lg">
+				New Post
+				</button>
 			</a>
 		</div>
 
