--- a/static/newpost.html
+++ b/static/newpost.html
@@ -3,10 +3,13 @@
 <html>
 <head>
 	<title>FeelzApp</title>	
-	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="css/bootstrap.min.css" rel="stylesheet">
+	<link href="css/bootstrap-theme.min.css" rel="stylesheet">
 	<link href="css/FeelzApp.css" rel="stylesheet">
 
+	<script src="https://code.jquery.com/jquery.js"></script>
+	<script src="js/bootstrap.min.js"></script>
 	<script src="js/FeelzApp.js"></script>
 
 	<!-- this is a comment in HTML -->
@@ -30,32 +33,42 @@
 		<div class="backButton">
 			<!-- make back button -->
 			<a href="index.html">
-				<p>Back</p>
+				<button type="button" class="btn btn-default btn-lg">
+					Back
+				</button>
 			</a>
 		</div>
 
 		<div>
 			<!-- add text box -->
-			<textarea rows="4" cols="50">
+			<textarea rows="10" cols="50">
 				Enter text here
 			</textarea>
 		</div>
 
 
-		<div>
+
+
+		<div class="dropdown">
 			<!-- add attach dropdown menu-->
-			<select>
-			  <option value="Attach">Attach</option>
-			  <option value="Video">Video</option>
-			  <option value="Audio">Audio</option>
-			  <option value="Etc">Etc</option>
-			</select>
+		 	<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true">
+		    	Attach
+				<span class="caret"></span>
+			</button>
+			<ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
+		    	<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Video</a></li>
+		    	<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Audio</a></li>
+		    	<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Image</a></li>
+		    	<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Etc</a></li>
+			</ul>
 		</div>
 
 		<div class="postButton">
 			<!-- add new post to post list, make post button-->
 			<a href="index.html">
-				<p>Post</p>
+				<button type="button" class="btn btn-default btn-lg">
+					Post
+				</button>
 			</a>
 		</div>
 
