--- a/static/newpost.html
+++ b/static/newpost.html
@@ -22,15 +22,18 @@
     <![endif]-->        
 </head>
 
-<body>
-	<div class="container">
-		<!-- h1 through h6 are headers. The higher the number, the smaller the header -->
-		<!-- p means paragraph -->
-		<div>
-			<h1>FeelzApp</h1>
-		</div>
-
-		<div class="backButton">
+<!-- fixed position navibar on top of screen -->
+<nav class="navbar navbar-default navbar-fixed-top">
+	<div class="navbar-header">
+  		<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+   		 	<span class="sr-only">Toggle navigation</span>
+			<span class="icon-bar"></span>
+        	<span class="icon-bar"></span>
+    	    <span class="icon-bar"></span>
+			</button>
+		<a class="navbar-brand" href="#">Feelz</a>
+	</div>
+		<div class="container">
 			<!-- make back button -->
 			<a href="index.html">
 				<button type="button" class="btn btn-default btn-lg">
@@ -38,15 +41,17 @@
 				</button>
 			</a>
 		</div>
+</nav>
 
+<body>
+	<div class="container">
+		
 		<div>
 			<!-- add text box -->
 			<textarea rows="10" cols="50">
 				Enter text here
 			</textarea>
 		</div>
-
-
 
 
 		<div class="dropdown">
@@ -80,4 +85,5 @@
 
 
 </body>
+
 </html>
