fix navbar format of buttons, to test on mobile

--- a/static/index.html
+++ b/static/index.html
@@ -23,6 +23,7 @@
     <![endif]-->        
 </head>
 
+
 <!-- fixed position navibar on top of screen -->
 <nav class="navbar navbar-default navbar-fixed-top">
 	<div class="navbar-header">
@@ -32,18 +33,15 @@
         	<span class="icon-bar"></span>
     	    <span class="icon-bar"></span>
 			</button>
+		<!-- navibar title -->
 		<a class="navbar-brand" href="#">Feelz</a>
-	</div>
-		<div class="container">
-		<!--- make newpost button on the navibar -->
-		<a href="newpost.html">
-			<button type="button" class="btn btn-default btn-lg">
-			New Post
-			</button>
-		</a>
-		</div>
+		<!-- right align -->
+		<form class="pull-right">
+				<!--- make newpost button on the navibar -->
+				<!-- A navigation bar type of button, this will center it in the bar height wise -->
+			<a class="btn btn-default navbar-btn" href="newpost.html">New Post</a>
+		</form>
 </nav>
-
 
 <body>
 	<div class="container">
