--- a/static/newpost.html
+++ b/static/newpost.html
@@ -20,8 +20,6 @@
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->        
-</head>
-
 <!-- fixed position navibar on top of screen -->
 <nav class="navbar navbar-default navbar-fixed-top">
 	<div class="navbar-header">
@@ -31,21 +29,21 @@
         	<span class="icon-bar"></span>
     	    <span class="icon-bar"></span>
 			</button>
+		<!-- navibar title -->
 		<a class="navbar-brand" href="#">Feelz</a>
-	</div>
-		<div class="container">
-			<!-- make back button -->
-			<a href="index.html">
-				<button type="button" class="btn btn-default btn-lg">
-					Back
-				</button>
-			</a>
-		</div>
+		<!-- right align -->
+		<form class="pull-right">
+				<!--- make back button on the navibar -->
+				<!-- A navigation bar type of button, this will center it in the bar height wise -->
+			<a class="btn btn-default navbar-btn" href="index.html">Back</a>
+		</form>
 </nav>
+
+
 
 <body>
 	<div class="container">
-		
+
 		<div>
 			<!-- add text box -->
 			<textarea rows="10" cols="50">
