no need for menu yet

--- a/static/index.html
+++ b/static/index.html
@@ -25,13 +25,15 @@
 <!-- fixed position navibar on top of screen -->
 <nav class="navbar navbar-default navbar-fixed-top">
 	<div class="navbar-header">
-		<!-- collapse formatting for mobile -->
+		<!-- collapse formatting for mobile, not needed for now unless we add a menu -->
+	<!--
   		<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
    		 	<span class="sr-only">Toggle navigation</span>
 			<span class="icon-bar"></span>
         	<span class="icon-bar"></span>
     	    <span class="icon-bar"></span>
 		</button>
+	-->
 		<!-- navibar title -->
 		<a class="navbar-brand" href="#">Feelz</a>
 		<!-- right align, wrap in form to add another class -->
