--- a/static/index.html
+++ b/static/index.html
@@ -75,7 +75,7 @@
 					<div class="col-md-6">
 						<!-- error checking goes here -->
 						<!--<a href="javascript:%20check_empty()" id="submit">Send</a>-->
-						<button href="#" type="submit" class="btn btn-default" onclick ="div_hide()">Post</button>
+						<button type="submit" class="btn btn-default" onclick ="hideNewPostForm()">Post</button>
 					</div>
 
 				</div>
