--- a/static/index.html
+++ b/static/index.html
@@ -75,7 +75,8 @@
 					<div class="col-md-6">
 						<!-- error checking goes here -->
 						<!--<a href="javascript:%20check_empty()" id="submit">Send</a>-->
-						<button type="submit" class="btn btn-default" onclick ="hideNewPostForm()">Post</button>
+						<!-- type="submit" -->
+						<button type="button" class="btn btn-default" onclick ="hideNewPostForm()">Post</button>
 					</div>
 
 				</div>
