--- a/static/index.html
+++ b/static/index.html
@@ -76,7 +76,7 @@
 						<!-- error checking goes here -->
 						<!--<a href="javascript:%20check_empty()" id="submit">Send</a>-->
 						<!-- type="submit" -->
-						<button type="button" class="btn btn-default" onclick ="hideNewPostForm()">Post</button>
+						<button id="postSubmission" type="button" class="btn btn-default">Post</button>
 					</div>
 
 				</div>
