--- a/static/index.html
+++ b/static/index.html
@@ -155,8 +155,8 @@
 			<div class="panel-heading clearfix">
     			<h3 class="panel-title pull-left">Post title</h3>
     			<div class="btn-group pull-right">
-    				<a onclick="hidePostPopup()" class="btn btn-default btn-sm">bump</a>
-    				<a onclick="hidePostPopup()" class="btn btn-default btn-sm">close</a>
+    				<a onclick="hidePopupPost()" class="btn btn-default btn-sm">bump</a>
+    				<a onclick="hidePopupPost()" class="btn btn-default btn-sm">close</a>
     			</div>
   		 	</div>
 		 	<div class="panel-body">
