--- a/static/index.html
+++ b/static/index.html
@@ -37,7 +37,7 @@
 			</button>
 			-->	
 			<!-- navibar title -->
-			<a class="navbar-brand" href="#">Feelz</a>
+			<a class="navbar-brand" href="#"><b>Feelz</b></a>
 
 			<!-- everything in this div will collapse into a menu button on mobile -->
 				<!-- pull-right: right align -->
@@ -71,6 +71,10 @@
 						  	</ul>
 						</div>
 						-->
+					</li>
+					<li>
+						
+		                 <a href="about_page.html">About FeelzApp</a>
 					</li>
 				<ul>
 
