--- a/static/about_page.html
+++ b/static/about_page.html
@@ -13,7 +13,8 @@
 	Angry? Let it out on the FeelzApp. Did you read a post that</br>
 	gave you the Feelz? Bump it to the top of the feed so others</br>
 	can get their Feelz on too. We're all friends here, so be nice!</br>
-	Enjoy!</p>
+	Enjoy!</br>
+	<a href="index.html">Back to Main Page</a></p>
 	</center>
 	</body>
 </html>
