working on navbar

--- a/static/index.html
+++ b/static/index.html
@@ -28,39 +28,34 @@
 		<div class="navbar-header">
 			<!-- collapse formatting for mobile, not needed for now unless we add more options
 				 on the navibar, i.e. the account settings and logout added and commented out-->
-			<!--
+			
 	  		<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menuIcon">
 	   		 	<span class="sr-only">Menu</span>
 				<span class="icon-bar"></span>
 	        	<span class="icon-bar"></span>
 	    	    <span class="icon-bar"></span>
 			</button>
-			-->	
+			
 			<!-- navibar title -->
 			<a class="navbar-brand" href="#"><b>Feelz</b></a>
 
 			<!-- everything in this div will collapse into a menu button on mobile -->
 				<!-- pull-right: right align -->
-			<!--<div class="collapse navbar-collapse pull-right" id="menuIcon"> -->
+			<div class="collapse navbar-collapse pull-right" id="menuIcon">
 				<!-- this list will be collapsed into one on mobile instead of side by side -->
-				<ul class="nav navbar-nav navbar-right pull-right"> 
-									<!-- take out pull right here if collapsing -->
+				<ul class="nav navbar-nav navbar-right"> 
 					<li>
 						<!--- make newpost button on the navibar.  
 										It will change to back on form load. -->
 						<!-- navbar-btn: formatted button for navbar -->
-						<button id="postButtonToggle" type="button" class="btn btn-default navbar-btn">New Post</button>
+						<a id="postButtonToggle">New Post</a>
 					</li>
 					<!-- devides new post and account settings in mobile -->
 				    <li class="divider"></li>
 					<li>
-						
 						<!-- keeps all of the contents lined up in a group of buttons -->
-						<!--
 						<div class="btn-group">
-						-->
 							<!-- dropdown-toggle: dropdown of menu options for account -->
-						<!--
 						  	<button type="button" class="btn btn-default navbar-btn dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
 						    	Account <span class="caret"></span>
 						  	</button>
@@ -70,7 +65,6 @@
 						    	<li><a href="#">Logout</a></li>
 						  	</ul>
 						</div>
-						-->
 					</li>
 					<li>
 						
