--- a/static/index.html
+++ b/static/index.html
@@ -25,23 +25,21 @@
 <body>
 	<!-- fixed position navibar on top of screen -->
 	<nav class="navbar navbar-default navbar-fixed-top">
-		<div class="navbar-header">
-			<!-- collapse formatting for mobile, not needed for now unless we add more options
-				 on the navibar, i.e. the account settings and logout added and commented out-->
-			
-	  		<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menuIcon">
-	   		 	<span class="sr-only">Menu</span>
-				<span class="icon-bar"></span>
-	        	<span class="icon-bar"></span>
-	    	    <span class="icon-bar"></span>
-			</button>
-			
-			<!-- navibar title -->
-			<a class="navbar-brand" href="#"><b>Feelz</b></a>
-
+		<div class="container">
+			<div class="navbar-header">
+				<!-- collapse formatting for mobile -->
+		  		<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menuIcon">
+		   		 	<span class="sr-only">Menu</span>
+					<span class="icon-bar"></span>
+		        	<span class="icon-bar"></span>
+		    	    <span class="icon-bar"></span>
+				</button>
+				<!-- navibar title -->
+				<a class="navbar-brand" href="#"><b>Feelz</b></a>
+			</div>
 			<!-- everything in this div will collapse into a menu button on mobile -->
 				<!-- pull-right: right align -->
-			<div class="collapse navbar-collapse pull-right" id="menuIcon">
+			<div id="menuIcon" class="collapse navbar-collapse" >
 				<!-- this list will be collapsed into one on mobile instead of side by side -->
 				<ul class="nav navbar-nav navbar-right"> 
 					<li>
@@ -52,19 +50,17 @@
 					</li>
 					<!-- devides new post and account settings in mobile -->
 				    <li class="divider"></li>
-					<li>
-						<!-- keeps all of the contents lined up in a group of buttons -->
-						<div class="btn-group">
-							<!-- dropdown-toggle: dropdown of menu options for account -->
-						  	<button type="button" class="btn btn-default navbar-btn dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-						    	Account <span class="caret"></span>
-						  	</button>
-						  	<ul class="dropdown-menu" role="menu">
-						  		<li class="divider"></li>
-						    	<li><a href="#">Settings</a></li>
-						    	<li><a href="#">Logout</a></li>
-						  	</ul>
-						</div>
+					<li >
+						<!-- dropdown-toggle: dropdown of menu options for account -->
+					  	<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+					    	Account <span class="caret"></span>
+					  	</a>
+					  	<ul class="dropdown-menu" role="menu">
+					  		<li class="divider"></li>
+					    	<li><a href="#">Settings</a></li>
+					    	<li><a href="#">Logout</a></li>
+					    	<li class="divider"></li>
+					  	</ul>
 					</li>
 					<li>
 						
