added help page
help page created and linked

--- a/static/index.html
+++ b/static/index.html
@@ -66,6 +66,9 @@
 						
 		                 <a href="about_page.html">About FeelzApp</a>
 					</li>
+					<li>
+						<a href="help_page.html">Help</a>
+					</li>
 				<ul>
 
 			<!-- </div> -->
