fix test align for menu bar

--- a/static/index.html
+++ b/static/index.html
@@ -39,7 +39,7 @@
 			</div>
 			<!-- everything in this div will collapse into a menu button on mobile -->
 				<!-- pull-right: right align -->
-			<div id="menuIcon" class="collapse navbar-collapse" >
+			<div id="menuIcon" class="collapse navbar-collapse menuIcon" >
 				<!-- this list will be collapsed into one on mobile instead of side by side -->
 				<ul class="nav navbar-nav navbar-right"> 
 					<li>
