--- a/static/index.html
+++ b/static/index.html
@@ -9,10 +9,6 @@
 	<link href="css/bootstrap-theme.min.css" rel="stylesheet">
 	<link href="css/FeelzApp.css" rel="stylesheet">
 
-	<script src="https://code.jquery.com/jquery.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/feelzApp.js"></script>
-
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -28,7 +24,7 @@
 		<div class="container">
 			<div class="navbar-header">
 				<!-- collapse formatting for mobile -->
-		  		<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menuIcon">
+		  		<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menuIcon" aria-expanded="false" aria-controls="navbar">
 		   		 	<span class="sr-only">Menu</span>
 					<span class="icon-bar"></span>
 		        	<span class="icon-bar"></span>
@@ -36,7 +32,7 @@
 				</button>
 				<!-- navibar title -->
 				<a class="navbar-brand" href="#"><b>Feelz</b></a>
-			
+			</div>
 			<!-- everything in this div will collapse into a menu button on mobile -->
 				<!-- pull-right: right align -->
 			<div id="menuIcon" class="collapse navbar-collapse menuIcon" >
@@ -77,50 +73,49 @@
 	</nav>
 
 	<!-- new post popup form -->
-	<div id="popup_container_form">
-		<div id="newpost_form">
-			<form class="newPostForm" action="#" id="form" method="post" name="form">
-				<!-- add post title -->
-				<input id="newPostTitle" name="newPostTitle" placeholder="Post Title" type="text"><br/>
-				<!-- add text box -->
-				<textarea id="newPostContent" name="newPostContent" placeholder="Enter text here"></textarea>
-				<div id="newPostButtons" class="row">
-					<!-- this feature takes up 8 column units -->
-					<div class="col-md-6">
-						<!-- Single button dropdown menu for attachments -->
-							<div class="btn-group">
-							  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-							    Attach <span class="caret"></span>
-							  </button>
-							  <ul class="dropdown-menu" role="menu">
-							    <li><a href="#">Video</a></li>
-							    <li><a href="#">Audio</a></li>
-							    <li><a href="#">Images</a></li>
-							    <li class="divider"></li>
-							    <li><a href="#">Etc</a></li>
-							  </ul>
-							</div>
+	<div class="container">
+		<div id="popup_container_form">
+			<div id="newpost_form">
+				<form class="newPostForm" action="#" id="form" method="post" name="form">
+					<!-- add post title -->
+					<input id="newPostTitle" name="newPostTitle" placeholder="Post Title" type="text"><br/>
+					<!-- add text box -->
+					<textarea id="newPostContent" name="newPostContent" placeholder="Enter text here"></textarea>
+					<div id="newPostButtons" class="row">
+						<!-- this feature takes up 8 column units -->
+						<div class="col-md-6">
+							<!-- Single button dropdown menu for attachments -->
+								<div class="btn-group">
+								  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+								    Attach <span class="caret"></span>
+								  </button>
+								  <ul class="dropdown-menu" role="menu">
+								    <li><a href="#">Video</a></li>
+								    <li><a href="#">Audio</a></li>
+								    <li><a href="#">Images</a></li>
+								    <li class="divider"></li>
+								    <li><a href="#">Etc</a></li>
+								  </ul>
+								</div>
+						</div>
+
+						<div class="col-md-6">
+							<!-- error checking goes here -->
+							<!--<a href="javascript:%20check_empty()" id="submit">Send</a>-->
+							<!-- type="submit" -->
+							<button id="postSubmission" type="button" class="btn btn-default">Post</button>
+						</div>
+
 					</div>
 
-					<div class="col-md-6">
-						<!-- error checking goes here -->
-						<!--<a href="javascript:%20check_empty()" id="submit">Send</a>-->
-						<!-- type="submit" -->
-						<button id="postSubmission" type="button" class="btn btn-default">Post</button>
-					</div>
-
-				</div>
-
-				
-			</form>
+					
+				</form>
+			</div>
 		</div>
 	</div>
-</body>
-
 
 
 <!-- body for the home page posts and post popups-->
-<body>
 	<div class="container">
 
 		<div class="panel panel-default postSnippet">
@@ -180,20 +175,31 @@
 	</div>
 
 	<!-- post popup -->
-	<div id="popup_container_panel">
-		<div class="panel panel-default postFull">
-			<div class="panel-heading clearfix">
-    			<h3 class="panel-title pull-left">Post title</h3>
-    			<div class="btn-group pull-right">
-    				<a onclick="hidePopupPost()" class="btn btn-default btn-sm">bump</a>
-    				<a onclick="hidePopupPost()" class="btn btn-default btn-sm">close</a>
-    			</div>
-  		 	</div>
-		 	<div class="panel-body">
-		    	This is the full post text!
-		  	</div>
+	<div class="container">
+		<div id="popup_container_panel">
+			<div class="panel panel-default postFull">
+				<div class="panel-heading clearfix">
+	    			<h3 class="panel-title pull-left">Post title</h3>
+	    			<div class="btn-group pull-right">
+	    				<a onclick="hidePopupPost()" class="btn btn-default btn-sm">bump</a>
+	    				<a onclick="hidePopupPost()" class="btn btn-default btn-sm">close</a>
+	    			</div>
+	  		 	</div>
+			 	<div class="panel-body">
+			    	This is the full post text!
+			  	</div>
+		</div>
 	</div>
 </body>
+
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+
+	<script src="https://code.jquery.com/jquery.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+	<script src="js/feelzApp.js"></script>
 
 
 </html>
