--- a/static/index.html
+++ b/static/index.html
@@ -53,8 +53,8 @@
 					  	</a>
 					  	<ul class="dropdown-menu" role="menu">
 					  		<li class="divider"></li>
-					    	<li><a href="#">Settings</a></li>
-					    	<li><a href="#">Logout</a></li>
+					    	<li><a href="accountSettings.html">Settings</a></li>
+					    	<li><a href="login_page.html">Logout</a></li>
 					    	<li class="divider"></li>
 					  	</ul>
 					</li>
