style for about and help
added new css file for about and help pages

--- a/static/about_page.html
+++ b/static/about_page.html
@@ -3,18 +3,29 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+			<link href="css/about_and_help.css" rel="stylesheet">
 	</head>
 	<body>
 	<center>
-	<h1><b>About FeelzApp.</b></h1>
-	</br></br>
+	<div class="page_title">
+	<h1><b><u>About FeelzApp.</u></b></h1>
+	</div>
+	<div class="container">
+
 	<p>FeelzApp is your new diary. You can post anonymously</br>
 	or reveal your identity. Have a strong feeling? Happy? Sad?</br>
 	Angry? Let it out on the FeelzApp. Did you read a post that</br>
 	gave you the Feelz? Bump it to the top of the feed so others</br>
 	can get their Feelz on too. We're all friends here, so be nice!</br>
 	Enjoy!</br>
-	<a href="index.html">Back to Main Page</a></p>
+	</p>
 	</center>
+	</div>
+	<div class="footer">
+	<footer>
+		
+			<a href="index.html">Back to Main Page</a>
+	</footer>
+	</div>
 	</body>
 </html>
