--- a/static/help_page.html
+++ b/static/help_page.html
@@ -3,11 +3,14 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link href="css/about_and_help.css" rel="stylesheet">
 	</head>
 	<body>
+
 	<center>
-	<h1><b>Help with the Feelz.</b></h1>
+	<h1><b><u>Help with the Feelz.</u></b></h1>
 	</br></br>
+	<div class="container">
 	<h3>User Log-In</h3>
 	<p>
 		How to create an account
@@ -23,7 +26,14 @@
 		Feeling a post
 	</p>
 	</br>
-	<a href="index.html">Back to Main Page</a></p>
+
 	</center>
+	</div>
+	<div class="footer">
+	<footer>
+		
+			<a href="index.html">Back to Main Page</a>
+	</footer>
+	</div>
 	</body>
 </html>
