--- a/public/menu.html
+++ b/public/menu.html
@@ -76,16 +76,16 @@
 										</div>
 									</div>
 										<div class="accordion-section">
-											<a class="accordion-section-title" href="/Help">Help</a>
+											<a class="accordion-section-title" href="/routes/help">Help</a>
 										</div>
 										<div class="accordion-section">
-											<a class="accordion-section-title" href="/About">About</a>
+											<a class="accordion-section-title" href="/about.html">About</a>
 										</div>
 										<div class="accordion-section">
-											<a class="accordion-section-title" href="/Account_Settings">Settings</a>
+											<a class="accordion-section-title" href="/routes/settings">Settings</a>
 										</div>
 										<div class="accordion-section">
-											<a class="accordion-section-title" href="/Login">Logout</a>
+											<a class="accordion-section-title" href="/routes/help">Logout</a>
 										</div>
 									
 
